@@ -51,6 +51,7 @@ The following people and organizations have contributed code to XCSoar:
  Timo Bruderek <timo.bruderek@gmx.de>
  Steffen Engel <steffen.engel@nutrimat.de>
  Alex Graf <xcsoar@grafitation.ch>
+ Thomas Ruf <Thomas.Ruf@computer.org>
 
 Documentation:
 
